--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>SivaRaam</h1>
-<p>Use GPT Freely</p>
+//<h1>SivaRaam</h1>
+//<p>Use GPT Freely</p>
 <iframe src="https://raamapromptwriter-10028.chipp.ai" height="800px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
 </body>
 </html>
