--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-//<h1>SivaRaam</h1>
+/*<h1>SivaRaam</h1>*/
 //<p>Use GPT Freely</p>
 <iframe src="https://raamapromptwriter-10028.chipp.ai" height="800px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
 </body>
