--- a/KeywordRaaM.html
+++ b/KeywordRaaM.html
@@ -5,6 +5,6 @@
 <p>Use GPT Freely</p> -->
 <iframe src="https://raamapromptwriter-10028.chipp.ai" height="600px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
 
-<a href="KeywordRaaM.html">help</a>
+<a href="index.html">Main</a>
 </body>
 </html>
