--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 
 <iframe src="https://raamapromptwriter-10028.chipp.ai" height="600px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
 
-<a href="KeywordRaaM.html">help</a>
+
+<a href="KeywordRaaM.html" onclick="window.open('KeywordRaaM.html', '_self');">
+Example
+
+
+</a>
 
 </body>
 </html>
