--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<!--<h1>SivaRaam</h1>
-<p>Use GPT Freely</p> -->
+<!--<h1>SivaRaam</h1> -->
+<p><a href="KeywordRaaM.html" onclick="window.open('KeywordRaaM.html', '_self');">
+Example
+
+
+</a></p>
 
 <iframe src="https://raamapromptwriter-10028.chipp.ai" height="600px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
 
 
-<a href="KeywordRaaM.html" onclick="window.open('KeywordRaaM.html', '_self');">
-Example
 
-
-</a>
 
 </body>
 </html>
