--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <!--<h1>SivaRaam</h1> -->
 <p><a href="KeywordRaaM.html" onclick="window.open('KeywordRaaM.html', '_self');">
-KEYWord_Chat
+KEYWord
 </a>
 
 </p>
