update all hooks

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <p><a href="KeywordRaaM.html" onclick="window.open('KeywordRaaM.html', '_self');">
 KEYWord
 </a>
+<a href="Hooks.html" onclick="window.open('KeywordRaaM.html', '_self');">
+Hooks
+</a>
 
 </p>
 
