--- a/KeywordRaaM.html
+++ b/KeywordRaaM.html
@@ -4,7 +4,7 @@
 <!--<h1>SivaRaam</h1>
 <p><p> -->
 <p>
-<a href="Home.html" onclick="window.open('KeywordRaaM.html', '_self');">
+<a href="index.html" onclick="window.open('KeywordRaaM.html', '_self');">
 HoMe
 </a></p>
 <iframe src="https://raamapromptwriter-10093.chipp.ai" height="600px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
