--- a/Hooks.html
+++ b/Hooks.html
@@ -4,11 +4,11 @@
 <!--<h1>SivaRaam</h1>
 <p>Use GPT Freely</p> -->
 <p>
-<a href="index.html" onclick="window.open('KeywordRaaM.html', '_self');">
+<a href="index.html" onclick="window.open('index.html', '_self');">
 HoMe
 </a></p>
 <iframe src="https://raamapromptwriter-10229.chipp.ai" height="600px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
 
-<a href="index.html">Main</a>
+
 </body>
 </html>
