--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@ KEYWord
 <a href="Hooks.html" onclick="window.open('KeywordRaaM.html', '_self');">
 Hooks
 </a>
-
 </p>
+
+<p><a href="GUGU.html" onclick="window.open('GUGU.html', '_self');">
+KEYWord
+</a></p>
 
 <iframe src="https://raamapromptwriter-10028.chipp.ai" height="600px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
 
