--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Hooks
 </p>
 
 <p><a href="GUGU.html" onclick="window.open('GUGU.html', '_self');">
-KEYWord
+GUGU
 </a></p>
 
 <iframe src="https://raamapromptwriter-10028.chipp.ai" height="600px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
