--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@ Hooks
 GUGU
 </a></p>
 
+<script async
+  src="https://js.stripe.com/v3/buy-button.js">
+</script>
+
+<stripe-buy-button
+  buy-button-id="buy_btn_1Pi2HWJe1LnnbhroJtLDFUIv"
+  publishable-key="pk_live_51Pi1pbJe1LnnbhroeX9VABOprVMZtrj7JRckgPPAgla4R7p2OeAQKv5tbrEjg3gtfJvCN69T4BRQ0cdaxYxUTjSa00zYJt70cW"
+>
+</stripe-buy-button>
+
 <iframe src="https://raamapromptwriter-10028.chipp.ai" height="600px" width="100%" frameborder="0" title="RaaM: A Prompt Writer"/>
 
 
